tests/snapshots/snapshots__coverage_fn_hmac_sha256.snap
---
source: tests/snapshots.rs
expression: content
---
# `hmacSha256`  🔒

> 🔒 **Trusted assumption — not proven here.** Trusted HMAC contract; real SHA-256/HMAC code is not proven equivalent here. Stands in for real function: `hmac_sha256`. Any proof that depends on this definition inherits that assumption.

**Implementation source:** `hmac_sha256` in [`cpp/src/hmac.cpp`](https://github.com/example/protocol/blob/verification/cpp/src/hmac.cpp).

### Signature

**Parameters**
- `k`: [HmacKey](../types.md#hmackey)
- `r`: [Request](../types.md#request)

**Returns**
- [HmacTag](../types.md#hmactag)

<details><summary>Raw signature</summary>

`HmacKey -> Request -> HmacTag`

</details>

### Formal definition (Cryptol)

```haskell
hmacSha256 k r = k ^ r ^ (r <<< 1)   // placeholder; specs only use equality
```

Uninterpreted in proofs (SAW can treat this as a Cryptol primitive).

### Related Properties
- [P8 — Correct Signature Verifies](../properties/authentication-security.md#p8--correct-signature-verifies)
- [P9 — Wrong Signature Fails](../properties/authentication-security.md#p9--wrong-signature-fails)
