tests/snapshots/snapshots__coverage_index.snap
---
source: tests/snapshots.rs
assertion_line: 256
expression: content
---
# SDEP

## Coverage summary

| Badge | Meaning | Count |
|-------|---------|-------|
| ✅ | Proven | 0 |
| 🔲 | Proven (bounded) | 0 |
| 🔒 | Trusted assumption | 2 |
| 🧩 | ABI adapter / stand-in | 1 |
| ⚠️ | Implemented, unverified | 4 |
| 📄 | Spec-only | 14 |
| | **Total** | **21** |

> ⚠️ **4 real functions have no proof and no declared abstraction.** These are the gaps a security review needs to inspect first.

## ⚠️ Implemented, unverified

Real production functions with no proof. This is the gap.

| Function | Source | Maps to | Reason codes | Notes |
|----------|--------|---------|--------------|-------|
| `canonicalizePayload` | impl (cpp) ([source](cpp/src/canonical.cpp)) | `canonicalize_lp` *(bounded model only)* | `R1 unbounded`, `R2 stl-heap` | — |
| `handle_provision` | impl (cpp) ([source](cpp/src/controller.cpp)) | composes `provisionKey` | `R6 compositional` | — |
| [`provisionKey`](functions/provisionKey.md) | model + impl (SDEP ↔ cpp) ([source](cpp/src/decisions.cpp)) | — | `R6 compositional` | — |
| `sha256` | impl (cpp) ([source](cpp/src/sha256.cpp)) | — | `R1 unbounded` | — |

## 🔒 Trusted assumptions

Assumed contracts for real external dependencies. These are explicit trust boundaries, not machine-checked equivalence proofs.

| Function | Source | Maps to | Reason codes | Notes |
|----------|--------|---------|--------------|-------|
| [`hmacSha256`](functions/hmacSha256.md) | model + impl (SDEP ↔ cpp) ([source](cpp/src/hmac.cpp)) | `hmacSha256`; stands in for `hmac_sha256` | `R2 stl-heap` | Trusted HMAC contract; real SHA-256/HMAC code is not proven equivalent here. |
| [`isValidSignature`](functions/isValidSignature.md) | model (SDEP) | — | — | Trusted signature-validity contract; production verifier is not proven equivalent here. |

## 🧩 ABI adapter / stand-in

Cryptol definitions with no real-code counterpart (placeholders, uninterpreted functions, ABI adapters). The notes column explains what each one stands in for.

| Function | Source | Maps to | Reason codes | Notes |
|----------|--------|---------|--------------|-------|
| [`canonLenPrefixed`](functions/canonLenPrefixed.md) | model + impl (SDEP ↔ cpp) ([source](cpp/src/canonical.cpp)) | `canonLenPrefixed` *(bounded model only)*; stands in for `canonicalize_lp` | `R1 unbounded` | Bounded fixed-width encoder used only for length-prefix reasoning. The general string canonicalizer in `cpp/src/canonical.cpp` is unverified. |

## 📄 Spec-only

Lives in the model on purpose (gap-exhibiting reference functions, etc.) — no implementation expected.

| Function | Source | Maps to | Notes |
|----------|--------|---------|-------|
| [`authenticate`](functions/authenticate.md) | model (SDEP) | — | — |
| [`canonNormalized`](functions/canonNormalized.md) | model (SDEP) | — | — |
| [`canonicalizeS`](functions/canonicalizeS.md) | model (SDEP) | — | — |
| [`enforceAccess`](functions/enforceAccess.md) | model (SDEP) | — | — |
| [`enrollDevice`](functions/enrollDevice.md) | model (SDEP) | — | — |
| [`fieldNormalized`](functions/fieldNormalized.md) | model (SDEP) | — | — |
| [`getStatus`](functions/getStatus.md) | model (SDEP) | — | — |
| [`isValidRequestDate`](functions/isValidRequestDate.md) | model (SDEP) | — | — |
| [`lpField`](functions/lpField.md) | model (SDEP) | — | — |
| [`lpHeader`](functions/lpHeader.md) | model (SDEP) | — | — |
| [`none`](functions/none.md) | model (SDEP) | — | — |
| [`requestNormalized`](functions/requestNormalized.md) | model (SDEP) | — | — |
| [`some`](functions/some.md) | model (SDEP) | — | — |
| [`verifierTimestamp_current`](functions/verifierTimestamp_current.md) | model (SDEP) | — | — |

## Excluded helpers

2 functions excluded from the matrix via `coverage.toml [exclude].functions` (not security-relevant): `to_lower`, `trim`.

Dedicated permalink: [Coverage Matrix](coverage.md).

## How verification works here

This site reports **two independent layers of proof**, and a security claim about the production binary needs *both*:

1. **Properties are proven against the design.** Each entry in [Security Properties](#security-properties) is a Cryptol `property` discharged by a solver (typically Z3) over the Cryptol model. A `✓` here says the *logic of the spec* is sound.

2. **Functions are proven against the implementation.** Each entry in [Functions](functions/index.md) is a Cryptol shim paired with a SAW `llvm_verify` / `mir_verify` proof showing the C++/Rust implementation produces identical outputs on every input. A `✓` here says *the code matches the model*.

A property's guarantee therefore only transfers to the compiled binary insofar as **every function it mentions** also carries a SAW equivalence proof. Each property page surfaces this transitive status as an *Implementation equivalence* callout: if any involved function is unproven, assumed, or failed, the callout calls that out explicitly so a green Cryptol verdict isn't read as an end-to-end certificate.

## Types

All type definitions: [types.md](types.md)

## Functions

| Function | Status | Description |
|----------|--------|-------------|
| [provisionKey](functions/provisionKey.md) | ⚠️ Implemented, unverified | Evaluates 5 conditions on `fleetEnabled`, `validRequest`, `vaultResult`, and `keyIsActive` in priority order, returning the first applicable `ProvisionResult`. Defaults to `PR_Succeeded` when no prior condition matches. |
| [enrollDevice](functions/enrollDevice.md) | 📄 Spec-only | Evaluates 7 conditions on `fleetEnabled`, `validMetadata`, `authResult`, and `activationResult` in priority order, returning the first applicable `EnrollmentResult`. Defaults to `ER_Unauthorized` when no prior condition matches. |
| [authenticate](functions/authenticate.md) | 📄 Spec-only | Returns `True` only when all of `dateValid`, `signatureValid`, and `claimsValid` are true. |
| [isValidRequestDate](functions/isValidRequestDate.md) | 📄 Spec-only | Checks whether the request date is valid: validates a bounded condition over `requestTs`, `currentTime`, and `windowSeconds`. |
| [hmacSha256](functions/hmacSha256.md) | 🔒 Trusted assumption | Uninterpreted in proofs (SAW can treat this as a Cryptol primitive). |
| [isValidSignature](functions/isValidSignature.md) | 🔒 Trusted assumption | Checks whether the signature is valid by comparing the computed and expected values. |
| [enforceAccess](functions/enforceAccess.md) | 📄 Spec-only | Evaluates 6 conditions on `mode` and `decision` in priority order, returning the first applicable a tuple. Defaults to `(True, False)` when no prior condition matches. |
| [getStatus](functions/getStatus.md) | 📄 Spec-only | Constructs `EnrollmentStatus` from the given inputs. |
| [canonNormalized](functions/canonNormalized.md) | 📄 Spec-only | A field is normalized iff bytes at indices >= n are zero. This is the invariant the C++ / Rust code maintains implicitly (it only reads the first n bytes); making it explicit keeps logically-distinct requests distinct as Cryptol values, so any collision the solver finds is a *real* one. |
| [canonLenPrefixed](functions/canonLenPrefixed.md) | 🧩 ABI adapter / stand-in | Length-prefixed canonicalization. Each variable-length field is preceded by its length tag: a parser reads the tag, then exactly that many bytes, then the next tag, then exactly that many bytes. No byte inside any field can be misread as a boundary, so the encoding is structurally injective. |
| [fieldNormalized](functions/fieldNormalized.md) | 📄 Spec-only | Compares computed and provided values over `f`, returning `True` on match. |
| [requestNormalized](functions/requestNormalized.md) | 📄 Spec-only | Tests whether `r` is well-formed. |
| [lpField](functions/lpField.md) | 📄 Spec-only | Length-prefix a Field as [len-byte] # buf. |
| [lpHeader](functions/lpHeader.md) | 📄 Spec-only | Length-prefix a header pair OR emit a constant-size all-zero placeholder if it is the auth header. Fixed output size keeps canonicalizeS Cryptol- statable; the placeholder content is irrelevant because the encoder elides auth headers regardless of their value. |
| [canonicalizeS](functions/canonicalizeS.md) | 📄 Spec-only | Concrete canonicalize: length-prefixed method, body, headers (with auth-header exclusion), path, then the 8-byte big-endian timestamp. |
| [verifierTimestamp_current](functions/verifierTimestamp_current.md) | 📄 Spec-only | The timestamp the verifier validates must equal the timestamp inside the signed request — otherwise an attacker can replay a stale signed request with a fresh "current time" supplied by the caller and pass the freshness check despite the signature being over old bytes. |

Per-function detail pages: [functions](functions/index.md)

## Security Properties

| Category | Properties | Status |
|----------|------------|--------|
| [Key Lifecycle Safety](properties/key-lifecycle-safety.md) | P1–P5 | 3 ⚠ design-only · 2 unverified |
| [Authentication Security](properties/authentication-security.md) | P6–P10 | 4 unverified · 1 ~ assumed |
| [Access Control](properties/access-control.md) | P11–P14 | 0/4 |
| [Protocol Liveness](properties/protocol-liveness.md) | P15–P18 | 0/4 |
| [Error Handling](properties/error-handling.md) | P19–P27 | 1 ⚠ design-only · 8 unverified |
| [Auth-header exclusion](properties/auth-header-exclusion.md) | P28 | 0/1 |
| [Timestamp binding](properties/timestamp-binding.md) | P29 | 0/1 |

4/29 properties proven, 1 assumed, 1 not attempted
