tests/snapshots/snapshots__multi_file_fn_authenticate.snap
---
source: tests/snapshots.rs
expression: content
---
# `authenticate`

### Signature

**Parameters**
- `dateValid`: Bit
- `signatureValid`: Bit
- `claimsValid`: Bit

**Returns**
- Bit

<details><summary>Raw signature</summary>

`Bit -> Bit -> Bit -> Bit`

</details>

Returns `True` only when all of `dateValid`, `signatureValid`, and `claimsValid` are true.

### Related Properties
- [P6 — Auth Requires Valid Date](../properties/authentication-security.md#p6--auth-requires-valid-date)
- [P7 — Auth Requires Valid Signature](../properties/authentication-security.md#p7--auth-requires-valid-signature)

<details><summary>Formal definition (Cryptol)</summary>

```cryptol
authenticate dateValid signatureValid claimsValid =
  dateValid && signatureValid && claimsValid
```

</details>
