tests/snapshots/snapshots__multi_file_fn_enroll_device.snap
---
source: tests/snapshots.rs
expression: content
---
# `enrollDevice`

### Signature

**Parameters**
- `fleetEnabled`: Bit
- `validMetadata`: Bit
- `authResult`: [AuthResult](../types.md#authresult)
- `activationResult`: [ActivationResult](../types.md#activationresult)

**Returns**
- [EnrollmentResult](../types.md#enrollmentresult)

<details><summary>Raw signature</summary>

`Bit -> Bit -> AuthResult -> ActivationResult -> EnrollmentResult`

</details>

Evaluates 7 conditions on `fleetEnabled`, `validMetadata`, `authResult`, and `activationResult` in priority order, returning the first applicable `[EnrollmentResult](../types.md#enrollmentresult)`. Defaults to `[ER_Unauthorized](../types.md#enrollmentresult)` when no prior condition matches.

| # | Condition | Result |
|---|-----------|--------|
| 1 | ~ fleetEnabled | [ER_Disabled](../types.md#enrollmentresult) |
| 2 | ~ validMetadata | [ER_Unauthorized](../types.md#enrollmentresult) |
| 3 | authResult == [AR_Authenticated](../types.md#authresult) |  |
| 4 | activationResult == [AC_AlreadyActive](../types.md#activationresult) | [ER_Unauthorized](../types.md#enrollmentresult) |
| 5 | *(otherwise)* | [ER_InternalError](../types.md#enrollmentresult)) |
| 6 | authResult == [AR_VaultUnavailable](../types.md#authresult) | [ER_InternalError](../types.md#enrollmentresult) |
| 7 | *(otherwise)* | [ER_Unauthorized](../types.md#enrollmentresult) |

```mermaid
flowchart TD
  Start(["enrollDevice"])
  Start --> C0{"~ fleetEnabled"}
  C0 -->|Yes| R0("ER_Disabled")
  C0 -->|No| C1{"~ validMetadata"}
  C1 -->|Yes| R1("ER_Unauthorized")
  C1 -->|No| C2{"authResult == AR_Authenticated"}
  C2 -->|No| C3{"activationResult == AC_AlreadyActive"}
  C3 -->|Yes| R2("ER_Unauthorized")
  C3 -->|No| R3("ER_InternalError)")
  R3 --> C4{"authResult == AR_VaultUnavailable"}
  C4 -->|Yes| R4("ER_InternalError")
  C4 -->|No| R5("ER_Unauthorized")
  classDef default fill:#e8f4fd,stroke:#2196F3,stroke-width:2px,color:#1565C0
  style Start fill:#1565C0,stroke:#0D47A1,color:#fff,stroke-width:2px
```

### Related Properties
- [P1 — Key Monotonicity](../properties/key-lifecycle-safety.md#p1--key-monotonicity)
- [P5 — Disabled Rejects All](../properties/key-lifecycle-safety.md#p5--disabled-rejects-all)
- [P10 — Missing Metadata Fails](../properties/authentication-security.md#p10--missing-metadata-fails)
- [P16 — Authenticated Activation Succeeds](../properties/protocol-liveness.md#p16--authenticated-activation-succeeds)
- [P19 — Vault Unavailable Is Internal](../properties/error-handling.md#p19--vault-unavailable-is-internal)
- [P21 — Activate Without Metadata Unauthorized](../properties/error-handling.md#p21--activate-without-metadata-unauthorized)
- [P22 — Activation Io Failure Is Internal](../properties/error-handling.md#p22--activation-io-failure-is-internal)

<details><summary>Formal definition (Cryptol)</summary>

```cryptol
enrollDevice fleetEnabled validMetadata authResult activationResult =
  if ~ fleetEnabled                       then ER_Disabled
   | ~ validMetadata                      then ER_Unauthorized
   | authResult == AR_Authenticated       then
        (if activationResult == AC_Success       then ER_Succeeded
          | activationResult == AC_AlreadyActive then ER_Unauthorized
         else                                         ER_InternalError)
   | authResult == AR_VaultUnavailable    then ER_InternalError
  else                                         ER_Unauthorized
```

</details>
